--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html><head><meta charset="utf-8"><title>ngx-filesaver | Simple file save with FileSaver.js</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="./"><link rel="icon" href="data:;base64,iVBORw0KGgo="><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></head><body><a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a><div class="container-fluid"><app-root>Loading...</app-root></div><script type="text/javascript" src="inline.8713f2abb5ecbd92bc39.bundle.js"></script><script type="text/javascript" src="polyfills.266dc979c152203cd0c0.bundle.js"></script><script type="text/javascript" src="main.adeba4656e1270264864.bundle.js"></script></body></html>
+<!DOCTYPE html><html><head>
+  <meta charset="utf-8">
+  <title>ngx-filesaver | Simple file save with FileSaver.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/ngx-notify/">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+</head>
+
+<body>
+  <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+  <div class="container-fluid"><app-root>Loading...</app-root></div>
+
+
+
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.e6445661c6f02064b447.js"></script><script type="text/javascript" src="main.a81cf13aa601b5d07f65.js"></script></body></html>
