--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>ngx-filesaver | Simple file save with FileSaver.js</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="/ngx-notify/">
+  <base href="/ngx-filesaver/">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
@@ -12,4 +12,4 @@
 
 
 
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.e6445661c6f02064b447.js"></script><script type="text/javascript" src="main.a81cf13aa601b5d07f65.js"></script></body></html>
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.e6445661c6f02064b447.js"></script><script type="text/javascript" src="main.1295eea965cc5ddebe7b.js"></script></body></html>
