--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html><head>
+<!doctype html>
+<html>
+
+<head>
   <meta charset="utf-8">
   <title>ngx-filesaver | Simple file save with FileSaver.js</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,9 +10,9 @@
 </head>
 
 <body>
-  <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+  <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
+      alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <div class="container-fluid"><app-root>Loading...</app-root></div>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.ab104aeffdaff9bc09c0.js"></script><script type="text/javascript" src="main.60c28a1c6a18684228d3.js"></script></body>
 
-
-
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.e6445661c6f02064b447.js"></script><script type="text/javascript" src="main.1295eea965cc5ddebe7b.js"></script></body></html>
+</html>
