--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
       alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <div class="container-fluid"><app-root>Loading...</app-root></div>
-<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="polyfills.1835e557ae2ae167541a.js"></script><script type="text/javascript" src="main.cccc65435c260cba6aa0.js"></script></body>
+<script src="runtime-es2015.858f8dd898b75fe86926.js" type="module"></script><script src="polyfills-es2015.6ee864df71900330ebce.js" type="module"></script><script src="runtime-es5.741402d1d47331ce975c.js" nomodule></script><script src="polyfills-es5.707f69749aa3e9d79b67.js" nomodule></script><script src="main-es2015.6cc567270361f7d95381.js" type="module"></script><script src="main-es5.5d60951d7ae1c71a0389.js" nomodule></script></body>
 
 </html>
