--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!doctype html>
-<html>
-
-<head>
+<!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <title>ngx-filesaver | Simple file save with FileSaver.js</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +9,7 @@
 <body>
   <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <div class="container-fluid"><app-root>Loading...</app-root></div>
-<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.aeb367e76450c0e3881c.js" defer></script><script src="main.965896f3dd4c9e9eaa51.js" defer></script></body>
+<script src="runtime.6531349aba02a1b5530b.js" defer></script><script src="polyfills.504443985ccac71ca714.js" defer></script><script src="main.40f84609d5487ee16478.js" defer></script>
 
-</html>
+
+</body></html>
