deploy: 9ac0ec468bd481966e2b5e7f0cf337137380bfae

--- a/404.html
+++ b/404.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html><html><head>
-  <meta charset="utf-8">
-  <title>ngx-filesaver | Simple file save with FileSaver.js</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="/ngx-filesaver/">
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-</head>
+    <meta charset="utf-8">
+    <title>ngx-filesaver | Simple file save with FileSaver.js</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/ngx-filesaver/">
+  </head>
 
-<body>
-  <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
-  <div class="container-fluid"><app-root>Loading...</app-root></div>
-<script src="runtime.825d37e43b97aea1.js" type="module"></script><script src="polyfills.3cf4b001d66f137c.js" type="module"></script><script src="main.c122ea6e2e12f871.js" type="module"></script>
-
+  <body>
+    <a href="//github.com/cipchk/ngx-filesaver"><img style="position: absolute; top: 0; right: 0; border: 0" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+    <div class="container-fluid"><app-root>Loading...</app-root></div>
+  <script src="runtime.a374a8cef708d6c2.js" type="module"></script><script src="polyfills.a7a20ccaecbff7d0.js" type="module"></script><script src="main.5c4dc28249fbbc8b.js" type="module"></script>
 
 </body></html>
